init Isaia Huron website

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,10 +38,11 @@
 
 html {
   min-width: 360px;
+  font-family: 'Inter', sans-serif;
 }
 
 .prose {
-  @apply text-[#000000] dark:text-[#FFFFFF];
+  @apply text-[#000000] dark:text-[#FFFFFF] font-sans;
 }
 
 .prose .anchor {
